docs: rolesのapiドキュメント作成
